syntax = "proto3";

option go_package = "github.com/qiangyt/cachemeshpoc/grpc";
option java_multiple_files = true;
option java_package = "com.github.qiangyt.cachemeshpoc.grpc";
option java_outer_classname = "CacheMeshProto";
option objc_class_prefix = "PCPs";

package cachemeshpoc;

// The service definition.
service CacheMesh {
  rpc GetSingle (GetSingleRequest) returns (GetSingleReply) {}
	rpc SetSingle (SetSingleRequest) returns (SetSingleReply) {}
}

message GetSingleRequest {
  string cache = 1;
  string key = 2;
	long version = 3;
}

message GetSingleReply {
  string key = 1;
  bytes value = 1;
	long version = 3;
}

message SetSingleRequest {
  string cache = 1;
  string key = 2;
	bytes value = 3;
}

message SetSingleReply {
	long version = 1;
}
